# rust-mcp

./: Cargo.toml  README.md
chat-bot/: Cargo.toml  README.md
chat-bot/src/: chat.rs  client.rs  config.rs  config.toml  lib.rs  main.rs  model.rs  tool.rs
mcp-client/: Cargo.toml
mcp-client/src/: client.rs
mcp-server/: Cargo.toml
mcp-server/src/: calculator_stdio.rs
mcp-server/src/common/: calculator.rs
