[workspace]
members = [
    "chat-bot",
    "mcp-client"
, "mcp-server"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
rmcp = { version = "0.3", features = ["client", "transport-child-process", "transport-io"]}
serde_json = { version = "1.0" }
serde = { version = "1.0" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }