[package]
name = "chat-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
rmcp = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }